episode-06/k8s-manifests/drupal.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drupal
  namespace: drupal
spec:
  replicas: 3  # Increased the default.
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - name: drupal
          image: 'drupal:9-apache'
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          volumeMounts:
            - mountPath: /var/www/html/sites/default/
              name: drupal-settings
            - mountPath: /var/www/html/sites/default/files/
              name: drupal-files
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '250m'
              memory: '256Mi'
      volumes:
        - name: drupal-settings
          configMap:
            name: drupal-config
        - name: drupal-files
          persistentVolumeClaim:
            claimName: drupal-files-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: drupal
  namespace: drupal
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: drupal

# Shiny new HPA configuration!
