episode-06/k8s-manifests/drupal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal
  namespace: drupal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ep6.kube101.jeffgeerling.com
    http:
      paths:
      - backend:
          serviceName: drupal
          servicePort: 80
